# obs-active-scene-dock

./: ActiveSceneDock.cpp  ActiveSceneDock.hpp  CHANGELOG.md  CMakeLists.txt  README.md  active-scene-dock.cpp  obs-active-scene-dock.cpp
.github/workflows/: main.yml
data/locale/: en-US.ini
misc/: logo.dia
